<resources>
    <string name="app_name">lista</string>
    <string name="top_text_main">APLICATIVO LISTA CURSO VIP</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="course">Curso desejado</string>
    <string name="phone">Telefone</string>
    <string name="save">Salvar</string>
    <string name="clear">Limpar</string>
    <string name="finish">Finalizar</string>
</resources>